2009-05-26  Jon Nistor  <nistor@snickrs.org>

	* perllib/Torrus/DevDiscover/Arbor_E.pm (discover):
	New discovery parameter: Arbor_E::disable-e30-hdd-logs,
        Arbor_E::enable-e30-mempool

2009-05-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/NetBotz.pm (discover):
	Discovery parameters: NetBotz::temp-max, NetBotz::humi-max,
	NetBotz::dew-max

2009-05-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/NetBotz.pm: new discovery module
	for NetBotz modular sensors

2009-05-07  Jon Nistor <nistor@snickers.org>

       * perllib/Torrus/DevDiscover/FTOS.pm
       New discovery module for Force10 Networks devices

2009-04-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 1.0.8

2008-11-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (discover):
	New discovery parameter: CiscoIOS::short-device-comment

2008-11-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (runCollector):
	Number of SNMP sessions per snmp_dispatcher is limited to 100
	because of some strange bugs (found on SPARC/Solaris platform)

2008-10-28  Jon Nistor <nistor@snickers.org>

        * perllib/Torrus/DevDiscover/Liebert.pm:
        New discovery module for Liebert HVAC systems

2008-10-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/srvderive.in: new utility that combines several services
	and combines them as MAX or SUM
	(sponsored by nexellent ag, www.nexellent.ch)

2008-09-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Added safe signal handlers to all components. Also Apache handlers
	close the BDB environment at the end of each execution.
	BDB should now be much more stable.

2008-09-16  Jon Nistor <nistor@snickers.org>

	* perllib/Torrus/DevDiscover/Arbor_E.pm:
	New discovery module for Arbor E series devices
